# DB-Workbench

./: .gitignore  2.txt  CMakeLists.txt  Project12.sln  README.md  事务系统设计详细需求文档（Transaction Subsystem – Detailed Requirements Specification）.md  接口文档.md  数据库设计需求文档.md  要求.txt
Project12/: MyDb.dat.books.PRIMARY.idx  MyDb.dat.students.PRIMARY.idx  MyDb.wal  Project12.vcxproj  Project12.vcxproj.filters  new.dat.categories.PRIMARY.idx  new.dat.products.PRIMARY.idx  new.dbf  system.dat._privileges.PRIMARY.idx  system.dat._users.PRIMARY.idx  system.dbf
Project12/backups/2023_snapshot/: MyDb.dat.Users.PRIMARY.idx  MyDb.dbf
Project12/x64/Debug/: Project12.exe.recipe  vc143.idb
Project12/x64/Debug/Project12.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Project12.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
docs/: backup_testing.md  login.html  sql_console.html  workbench.html
src/: api_server.cpp  api_server.h  auth.cpp  auth.h  db_types.h  ddl.cpp  ddl.h  dml.cpp  dml.h  http_server.cpp  http_server.h  json_utils.h  main.cpp  parser.cpp  parser.h  path_utils.cpp  path_utils.h  query.cpp  query.h  storage_engine.cpp  storage_engine.h  storage_engine_txn.cpp
src/txn/: lock_manager.cpp  lock_manager.h  log_manager.cpp  log_manager.h  recovery.cpp  recovery.h  txn_manager.cpp  txn_manager.h  txn_types.h
